--- a/AutisteWatch/WatchAutiste Extension/Info.plist
+++ b/AutisteWatch/WatchAutiste Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>LPBG-IEM.AutisteWatch.watchkitapp</string>
+			<string>fr.IEM.AutisteWatch.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
