--- a/AutisteWatch/WatchAutiste/Info.plist
+++ b/AutisteWatch/WatchAutiste/Info.plist
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>LPBG-IEM.AutisteWatch</string>
+	<string>fr.IEM.AutisteWatch</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
